<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:id="@+id/ll"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/lp_number"/>
        <EditText
            android:id="@+id/lp_number"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="0"
            />
        </LinearLayout>
    <Button
        android:layout_below="@id/ll"
        android:id="@+id/bn_lp_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xiao_zhu_calend"/>
    <LinearLayout
        android:id="@+id/ll_2"
        android:layout_below="@id/bn_lp_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/lp_no_milk"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/lp_no_milk"/>
        <CheckBox
            android:id="@+id/is_no_milk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="AreyouSure???"
            android:checked="false"/>
    </LinearLayout>
    <Button
        android:layout_below="@id/ll_2"
        android:id="@+id/bn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"/>

</RelativeLayout>